--- a/04_Regional_Climate_Trends/Guides/4_Communicating_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/4_Communicating_Climate_Trends.Rnw
@@ -1,4 +1,14 @@
 \documentclass{article}
+\usepackage{natbib}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    hyperindex=true,
+    linkcolor=red,
+    filecolor=magenta,
+    urlcolor=purple,
+    citecolor=violet
+}
 
 \title{Communicating Climate Trends}
 \author{Marc Los Huertos}
@@ -1878,5 +1888,12 @@ rm(dbase)
 @
 
 The document took \Sexpr{round(totaltime,1)} minutes to process and compile. My next goal will be to optimize the process and streamline the time to analyze. 
+
+% bibilography section here-------------------------------------------
+%\clearpage
+
+\bibliographystyle{apalike}
+%\renewcommand\bibname{References}{}
+\bibliography{/home/mwl04747/RTricks/references}%	\addcontentsline{toc}{chapter}{References}
 
 \end{document}
